compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__exhaustiveness__empty_case_of_list.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
expression: "\nlet list = []\ncase list {}\n"
---
error: Inexhaustive patterns
  ┌─ /src/one/two.gleam:3:1
  │
3 │ case list {}
  │ ^^^^^^^^^^^^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    []
    [_, ..]
